<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <GVL Name="GVL_TXI_VAC_PUMPS" Id="{e367e0c2-c1cf-4d17-8bd9-180985d15113}">
    <Declaration><![CDATA[VAR_GLOBAL

//B940-009-R17-PCI-01
{attribute 'pytmc' := ' pv: TXI:PIP:01 '}
{attribute 'TcLinkTo' := 	'.i_iPRESS		:= TIID^Device 1 (EtherCAT)^Term 30 (EK1200)^E8 (EL3064)^TV1K3_PIP_01^Value  ';
					  :=	'.q_xHVEna_DO 	:= TIID^Device 1 (EtherCAT)^Term 30 (EK1200)^E9 (EL2794)^TV1K3_PIP_01^Output ';
					  := 	'.i_xSP_DI		:= TIID^Device 1 (EtherCAT)^Term 30 (EK1200)^E10 (EL1004)^TV1K3_PIP_01^Input '
}
fb_TV1K3_PIP_01: FB_PIP_GAMMA;

{attribute 'pytmc' := ' pv: TXI:PIP:02 '}
{attribute 'TcLinkTo' := 	'.i_iPRESS		:= TIID^Device 1 (EtherCAT)^Term 30 (EK1200)^E8 (EL3064)^ST1K3_PIP_01^Value  ';
					  :=	'.q_xHVEna_DO 	:= TIID^Device 1 (EtherCAT)^Term 30 (EK1200)^E9 (EL2794)^ST1K3_PIP_01^Output ';
					  := 	'.i_xSP_DI		:= TIID^Device 1 (EtherCAT)^Term 30 (EK1200)^E10 (EL1004)^ST1K3_PIP_01^Input '
}
fb_ST1K3_PIP_01: FB_PIP_GAMMA;

{attribute 'pytmc' := ' pv: TXI:PIP:03 '}
{attribute 'TcLinkTo' := 	'.i_iPRESS		:= TIID^Device 1 (EtherCAT)^Term 30 (EK1200)^E8 (EL3064)^PC1K3_PIP_01^Value  ';
					  :=	'.q_xHVEna_DO 	:= TIID^Device 1 (EtherCAT)^Term 30 (EK1200)^E9 (EL2794)^PC1K3_PIP_01^Output ';
					  := 	'.i_xSP_DI		:= TIID^Device 1 (EtherCAT)^Term 30 (EK1200)^E10 (EL1004)^PC1K3_PIP_01^Input '
}
fb_PC1K3_PIP_01: FB_PIP_GAMMA;

{attribute 'pytmc' := ' pv: TXI:PIP:04 '}
{attribute 'TcLinkTo' := 	'.i_iPRESS		:= TIID^Device 1 (EtherCAT)^Term 30 (EK1200)^E8 (EL3064)^PC1K3_PIP_02^Value  ';
					  :=	'.q_xHVEna_DO 	:= TIID^Device 1 (EtherCAT)^Term 30 (EK1200)^E9 (EL2794)^PC1K3_PIP_02^Output ';
					  := 	'.i_xSP_DI		:= TIID^Device 1 (EtherCAT)^Term 30 (EK1200)^E10 (EL1004)^PC1K3_PIP_02^Input '
}
fb_PC1K3_PIP_02: FB_PIP_GAMMA;

//B940-009-R17-PCI-02
{attribute 'pytmc' := ' pv: TXI:PIP:05 '}
{attribute 'TcLinkTo' := 	'.i_iPRESS		:= TIID^Device 1 (EtherCAT)^Term 30 (EK1200)^E11 (EL3064)^TV2K3_PIP_01^Value  ';
					  :=	'.q_xHVEna_DO 	:= TIID^Device 1 (EtherCAT)^Term 30 (EK1200)^E12 (EL2794)^TV2K3_PIP_01^Output ';
					  := 	'.i_xSP_DI		:= TIID^Device 1 (EtherCAT)^Term 30 (EK1200)^E13 (EL1004)^TV2K3_PIP_01^Input '
}
fb_TV2K3_PIP_01: FB_PIP_GAMMA;

{attribute 'pytmc' := ' pv: TXI:PIP:06 '}
{attribute 'TcLinkTo' := 	'.i_iPRESS		:= TIID^Device 1 (EtherCAT)^Term 30 (EK1200)^E11 (EL3064)^TV3K3_PIP_01^Value  ';
					  :=	'.q_xHVEna_DO 	:= TIID^Device 1 (EtherCAT)^Term 30 (EK1200)^E12 (EL2794)^TV3K3_PIP_01^Output ';
					  := 	'.i_xSP_DI		:= TIID^Device 1 (EtherCAT)^Term 30 (EK1200)^E13 (EL1004)^TV3K3_PIP_01^Input '
}
fb_TV3K3_PIP_01: FB_PIP_GAMMA;

{attribute 'pytmc' := ' pv: TXI:PIP:07 '}
{attribute 'TcLinkTo' := 	'.i_iPRESS		:= TIID^Device 1 (EtherCAT)^Term 30 (EK1200)^E11 (EL3064)^TV4K3_PIP_01^Value  ';
					  :=	'.q_xHVEna_DO 	:= TIID^Device 1 (EtherCAT)^Term 30 (EK1200)^E12 (EL2794)^TV4K3_PIP_01^Output ';
					  := 	'.i_xSP_DI		:= TIID^Device 1 (EtherCAT)^Term 30 (EK1200)^E13 (EL1004)^TV4K3_PIP_01^Input '
}
fb_TV4K3_PIP_01: FB_PIP_GAMMA;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>