<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_TXI_VAC_VALVES" Id="{49153936-06c3-4261-b5ef-2e49a6d9a655}">
    <Declaration><![CDATA[VAR_GLOBAL
	
//FEE Valves
{attribute 'TcLinkTo' := 	'.i_xOpnLS	:=	TIID^Device 1 (EtherCAT)^Term 30 (EK1200)^E16 (EK1122)^K0S15-PNL-02 EP1 (EP2338-0002)^Channel 1^Input;
                             .i_xClsLS	:=	TIID^Device 1 (EtherCAT)^Term 30 (EK1200)^E16 (EK1122)^K0S15-PNL-02 EP1 (EP2338-0002)^Channel 2^Input;
                             .q_xOPN_DO	:=	TIID^Device 1 (EtherCAT)^Term 30 (EK1200)^E16 (EK1122)^K0S15-PNL-02 EP1 (EP2338-0002)^Channel 11^Output'}
{attribute 'pytmc' := ' pv: PC1K3:VGC:01 '}
fb_PC1K3_VGC_01 : FB_VGC;
{attribute 'TcLinkTo' := 	'.i_xOpnLS	:=	TIID^Device 1 (EtherCAT)^Term 30 (EK1200)^E16 (EK1122)^K3S34-PNL-1 EP1 (EP2338-0002)^Channel 1^Input;
                             .i_xClsLS	:=	TIID^Device 1 (EtherCAT)^Term 30 (EK1200)^E16 (EK1122)^K3S34-PNL-1 EP1 (EP2338-0002)^Channel 2^Input;
                             .q_xOPN_DO	:=	TIID^Device 1 (EtherCAT)^Term 30 (EK1200)^E16 (EK1122)^K3S34-PNL-1 EP1 (EP2338-0002)^Channel 11^Output'}
{attribute 'pytmc' := ' pv: TV1K3:VGC:01 '}
fb_TV1K3_VGC_01 : FB_VGC;
//H1.1 Valves
{attribute 'pytmc' := ' pv: TV2K3:VGC:01 '}
{attribute 'TcLinkTo' := 	'.i_xOpnLS	:=	TIIB[H1K3S01-PNL-01 EP1 (EP2338-0002)]^Channel 1^Input;
                             .i_xClsLS	:=	TIIB[H1K3S01-PNL-01 EP1 (EP2338-0002)]^Channel 2^Input;
                             .q_xOPN_DO	:=	TIIB[H1K3S01-PNL-01 EP1 (EP2338-0002)]^Channel 11^Output
'}

fb_TV2K3_VGC_01 : FB_VGC;
{attribute 'pytmc' := ' pv: TV4K3:VGC:01 '}
{attribute 'TcLinkTo' := 	'.i_xOpnLS	:=	TIIB[H1K3S03-PNL-01 EP1 (EP2338-0002)]^Channel 1^Input;
                             .i_xClsLS	:=	TIIB[H1K3S03-PNL-01 EP1 (EP2338-0002)]^Channel 2^Input;
                             .q_xOPN_DO	:=	TIIB[H1K3S03-PNL-01 EP1 (EP2338-0002)]^Channel 11^Output
'}
fb_TV4K3_VGC_01 : FB_VGC;


END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>