<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="GVL_TXI_VAC_VFS" Id="{b5e2500d-8c0a-4623-a4a8-c639a1c0aee2}">
    <Declaration><![CDATA[VAR_GLOBAL
{attribute 'pytmc' := '
   pv: TV2K3:VFS:01
'}
{attribute 'TcLinkTo' := 		'.q_xPress_OK		:= 	TIPC^txi_sxr_vac^txi_sxr_vac Instance^FSV_task Inputs^GVL_TXI_VAC_VFS.TV2K3_VFS_01.i_xPress_OK;
                                 .q_xOPN_SW			:=  TIPC^txi_sxr_vac^txi_sxr_vac Instance^FSV_task Inputs^GVL_TXI_VAC_VFS.TV2K3_VFS_01.i_xOPN_SW;
                                 .q_xCLS_SW			:=  TIPC^txi_sxr_vac^txi_sxr_vac Instance^FSV_task Inputs^GVL_TXI_VAC_VFS.TV2K3_VFS_01.i_xCLS_SW;
                                 .q_xVAC_FAULT_Reset:= 	TIPC^txi_sxr_vac^txi_sxr_vac Instance^FSV_task Inputs^GVL_TXI_VAC_VFS.TV2K3_VFS_01.i_xVAC_FAULT_Reset;
                                 .q_xOverrideMode	:= 	TIPC^txi_sxr_vac^txi_sxr_vac Instance^FSV_task Inputs^GVL_TXI_VAC_VFS.TV2K3_VFS_01.i_xOverrideMode;
                                 .q_xOverrideOpen	:= 	TIPC^txi_sxr_vac^txi_sxr_vac Instance^FSV_task Inputs^GVL_TXI_VAC_VFS.TV2K3_VFS_01.i_xOverrideOpen;
                                 .i_xTrigger		:=	TIPC^txi_sxr_vac^txi_sxr_vac Instance^FSV_task Outputs^GVL_TXI_VAC_VFS.TV2K3_VFS_01.q_xTrigger;
                                 .i_xVFS_Open		:=	TIPC^txi_sxr_vac^txi_sxr_vac Instance^FSV_task Outputs^GVL_TXI_VAC_VFS.TV2K3_VFS_01.q_xVFS_Open;
                                 .i_xVFS_Closed		:=	TIPC^txi_sxr_vac^txi_sxr_vac Instance^FSV_task Outputs^GVL_TXI_VAC_VFS.TV2K3_VFS_01.q_xVFS_Closed;
                                 .i_xVAC_FAULT_OK	:=  TIPC^txi_sxr_vac^txi_sxr_vac Instance^FSV_task Outputs^GVL_TXI_VAC_VFS.TV2K3_VFS_01.q_xVAC_FAULT_OK;
                                 .i_xMPS_OK			:=  TIPC^txi_sxr_vac^txi_sxr_vac Instance^FSV_task Outputs^GVL_TXI_VAC_VFS.TV2K3_VFS_01.q_xMPS_OK;
                                 .i_eVFS_State		:=	TIPC^txi_sxr_vac^txi_sxr_vac Instance^FSV_task Outputs^GVL_TXI_VAC_VFS.TV2K3_VFS_01.q_eVFS_State;
                                 .q_xVetoValveOpenDO := TIPC^txi_sxr_vac^txi_sxr_vac Instance^FSV_task Inputs^GVL_TXI_VAC_VFS.TV2K3_VFS_01.i_xVetoValveOpenDO;
                                 .q_xVetoValveClosed := TIPC^txi_sxr_vac^txi_sxr_vac Instance^FSV_task Inputs^GVL_TXI_VAC_VFS.TV2K3_VFS_01.i_xVetoValveClosed '}
TV2K3_VFS_01_Interface : FB_VFS_Interface;

{attribute 'TcLinkTo' := 	'
    .q_xClose_A	:=	TIIB[H1K3S01-DRL-01 E1 (EL2202)]^Channel 1^Output;
    .q_xClose_B	:=	TIIB[H1K3S01-DRL-01 E1 (EL2202)]^Channel 2^Output;
    .q_xClose_C	:=	TIIB[H1K3S01-DRL-01 E2 (EL2202)]^Channel 1^Output;
    .q_xOPN_DO	:=	TIIB[H1K3S01-DRL-01 E2 (EL2202)]^Channel 2^Output;
    .i_xClsLS	:=	TIIB[H1K3S01-DRL-01 E3 (EL1004)]^Channel 1^Input;
    .i_xOpnLS	:=	TIIB[H1K3S01-DRL-01 E3 (EL1004)]^Channel 2^Input;;
    .i_xTrigger :=  TIIB[E6 (EL1124)]^Channel 1^Input;
'}
TV2K3_VFS_01 : FB_VFS;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>