<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="PRG_TXI_VAC_VALVES" Id="{4c9a7319-3f14-4d3b-bb2f-4b6392242f38}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_TXI_VAC_VALVES
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[fb_PC1K3_VGC_01(
    i_stUSG := fb_PC1K3_PIP_02.q_IG,
    i_stDSG := fb_PC1K3_PIP_01.q_IG,
    i_xDis_DPIlk := FALSE,
    i_xEPS_OK := TRUE,
    i_xPMPS_OK := TRUE,
    i_xExt_OK := TRUE,
    i_xOverrideMode := xSystemOverrideMode1,
    io_fbFFHWO := g_FastFaultOutput1,
    fbArbiter := fbArbiter1
);

fb_TV1K3_VGC_01(
    i_stUSG := fb_TV1K3_PIP_01.q_IG,
    i_stDSG := fb_ST1K3_PIP_01.q_IG,
    i_xDis_DPIlk := FALSE,
    i_xEPS_OK := TRUE,
    i_xPMPS_OK := TRUE,
    i_xExt_OK := TRUE,
    i_xOverrideMode := xSystemOverrideMode1,
    io_fbFFHWO := g_FastFaultOutput1,
    fbArbiter := fbArbiter1
);

fb_TV2K3_VGC_01(
    i_stUSG := fb_ST1K3_PIP_01.q_IG,
    i_stDSG := fb_TV2K3_PIP_01.q_IG,
    i_xDis_DPIlk := FALSE,
    i_xEPS_OK := TRUE,
    i_xPMPS_OK := TRUE,
    i_xExt_OK := TRUE,
    i_xOverrideMode := xSystemOverrideMode1,
    io_fbFFHWO := g_FastFaultOutput1,
    fbArbiter := fbArbiter1
);

fb_TV4K3_VGC_01(
    i_stUSG := fb_TV3K3_GCC_01.IG,
    i_stDSG := fb_TV4K3_GCC_01.IG,
    i_xDis_DPIlk := FALSE,
    i_xEPS_OK := TRUE,
    i_xPMPS_OK := TRUE,
    i_xExt_OK := TRUE,
    i_xOverrideMode := xSystemOverrideMode1,
    io_fbFFHWO := g_FastFaultOutput1,
    fbArbiter := fbArbiter1
);

fb_TV5K3_VGC_01(
    i_stUSG := fb_TV4K3_GCC_01.IG,
    i_stDSG := fb_TV4K3_GCC_01.IG,
    i_xDis_DPIlk := FALSE,
    i_xEPS_OK := TRUE,
    i_xPMPS_OK := TRUE,
    i_xExt_OK := fb_TV4K3_VGC_01.M_IsClosed(),
    i_xOverrideMode := xSystemOverrideMode1,
    io_fbFFHWO := g_FastFaultOutput1,
    fbArbiter := fbArbiter1
);
    

// VFS ValvesK3
TV2K3_VFS_01_Interface(IG := fb_TV4K3_GCC_01.IG(*fb_TV4K3_GFS_01.IG*));]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>